# billing-data-visualizer-backend

./: accountEventEmitter.ts  codegen.yml  data.ts  dataGenerators.ts  graphql.schema.json  index.ts  nodemon.json  package.json  pyproject.toml  resolvers.ts  tsconfig.json  typeDefs.graphql  typeDefs.ts  types.ts
data/: accountEventEmitter.ts  currencyByCountry.ts  db.json  generateInitialAccounts.ts  generators.ts  latLngGenerator.py
