[tool.poetry]
name = "billing-data-visualizer-backend"
version = "0.1.0"
description = ""
authors = ["Kasey Cowley <kasey.cowley@zapier.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyshp = "^2.1.3"
Shapely = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
